feature: add link scrript to the JS module

--- a/integration_test_app/web/index.html
+++ b/integration_test_app/web/index.html
@@ -32,6 +32,8 @@
   <title>integration_test_app</title>
   <link rel="manifest" href="manifest.json">
 
+  <script type="text/javascript" src='https://cdn.jsdelivr.net/gh/NikitaPipita/agora_rtm_flutter_web_wrapper@master/dist/agora_rtm_bundle.js'></script>
+
   <script>
     // The value below is injected by flutter build, do not touch.
     var serviceWorkerVersion = null;
